...
            "state" : "translated",
            "value" : "关于"
          }
        }
      }
    },
    "Add the Clipbara Keyboard" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Clipbara 키보드 추가"
...
            "state" : "translated",
            "value" : "正在连接 iCloud…"
          }
        }
      }
    },
    "Continue" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "계속"
...
            "state" : "translated",
            "value" : "继续"
          }
        }
      }
    },
    "Copied" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "복사됨"
...
            "state" : "translated",
            "value" : "无法恢复购买项目。请检查网络连接后重试。"
          }
        }
      }
    },
    "Create" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "생성"
...
            "state" : "translated",
            "value" : "日期"
          }
        }
      }
    },
    "Delete" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "삭제"
...
            "state" : "translated",
            "value" : "删除 %lld 个剪贴内容？"
          }
        }
      }
    },
    "Delete iCloud Data" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "iCloud 데이터 삭제"
...
            "state" : "translated",
            "value" : "删除 iCloud 数据？"
          }
        }
      }
    },
    "Delete iCloud Data…" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "iCloud 데이터 삭제…"
...
            "state" : "translated",
            "value" : "关闭"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "완료"
          }
...
            "state" : "translated",
            "value" : "此版本未设置 iCloud。"
          }
        }
      }
    },
    "iCloud Sync" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "iCloud 동기화"
...
            "state" : "translated",
            "value" : "长按剪贴内容并选择“固定”即可添加到这里。"
          }
        }
      }
    },
    "More" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "더 보기"
...
            "state" : "translated",
            "value" : "新建钉板"
          }
        }
      }
    },
    "New Pinboard…" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "새 핀보드…"
...
            "state" : "translated",
            "value" : "未在此 Apple 账户中找到解锁购买记录。"
          }
        }
      }
    },
    "Not Now" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "나중에"
...
            "state" : "translated",
            "value" : "打开 Clipbara 开始免费试用。"
          }
        }
      }
    },
    "Open Settings" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "설정 열기"
...
            "state" : "translated",
            "value" : "其他"
          }
        }
      }
    },
    "Pin" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "고정"
...
            "state" : "translated",
            "value" : "钉板"
          }
        }
      }
    },
    "Pinboards" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "핀보드"
          }
...
            "state" : "translated",
            "value" : "已从“%@”移除"
          }
        }
      }
    },
    "Rename" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "이름 변경"
...
            "state" : "translated",
            "value" : "富文本"
          }
        }
      }
    },
    "Save" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "저장"
...
            "state" : "translated",
            "value" : "选择"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "설정"
...
            "state" : "translated",
            "value" : "设置 > 通用 > 键盘 > 键盘 > 添加新键盘 > Clipbara"
          }
        }
      }
    },
    "Setup Guide" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "설정 안내"
...
            "state" : "translated",
            "value" : "设置指南"
          }
        }
      }
    },
    "Share" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "공유"
...
            "state" : "translated",
            "value" : "空格"
          }
        }
      }
    },
    "Start 7-Day Free Trial" : {
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "7일 무료 체험 시작"
          }
...
            "state" : "translated",
            "value" : "立即同步"
          }
        }
      }
    },
    "Sync with Your Mac" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "맥과 동기화"
...
            "state" : "translated",
            "value" : "免费试用 Clipbara 7 天"
          }
        }
      }
    },
    "Turn On" : {
      "extractionState" : "stale",
      "localizations" : {
        "ko" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "켜기"
...
